# agent-skills

./: .gitignore  README.md  main.py  pyproject.toml  references_and_skills_prompt.md  rlm_prompt_corpus.md  skill_development_guidelines.md
references/: AGENTS.md  agent_best_practices_from_cursor.md  agent_skills_spec_from_agentskills_io.md  building_effective_agents_from_anthropic.md  code_execution_with_mcp_from_anthropic.md  code_mode_from_cloudflare.md  demystifying_evals_for_ai_agents_from_anthropic.md  effective_harnesses_for_long_running_agents_from_anthropic.md  eval_driven_development.md  mcpc_readme_from_apify.md  ralph-wiggum-as-software-engineer.md  ralph_wiggum_plugin_from_anthropic.md  skill_creator_from_codex.md  writing_tools_for_agents_from_anthropic.md
skills/agent-workflow-playbook/references/: workflow-checklist.md
skills/agent-workflow-playbook/templates/: workflow_plan.json
skills/creating-mcp-code-mode-skills/: SKILL.md
skills/creating-mcp-code-mode-skills/references/: anthropic_skill_authoring_best_practices.md  skill_creator_from_anthropic.md
skills/creating-skills/: SKILL.md
skills/creating-skills/scripts/: init_skill.py
skills/defining-instrumentation/: SKILL.md
skills/inspecting-the-environment/: SKILL.md
skills/querying-jira-programmatically/: SKILL.md
skills/querying-notion-programmatically/: SKILL.md
skills/reporting-situation/: SKILL.md
skills/slicing-long-contexts/: SKILL.md
skills/using-mcp-tools-with-mcpc/: SKILL.md
skills/working-with-notion-programmatically/: SKILL.md
tests/: test_provider_registry.py
(+102 files in other folders)
