[project]
name = "aufrank-agent-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.47.0",
    "python-markdown>=0.1.0",
    "ruff>=0.14.11",
    "tiktoken>=0.12.0",
]
